2005-04-26  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-application.c: (application_init_gettext):
	* libplanner/mrp-paths-gnome.c: (mrp_paths_get_sql_dir),
	(mrp_paths_get_locale_dir):
	* libplanner/mrp-paths-win32.c: (mrp_paths_get_file_modules_dir),
	(mrp_paths_get_sql_dir), (mrp_paths_get_locale_dir):
	* src/Makefile.am:
	* src/planner-main.c: (main):
	* src/planner-sql-plugin.c: (check_database_tables):
	* src/planner-util-win32.c: (planner_util_show_url),
	(planner_util_show_help): Modified patch from Francisco to fix up
	the path stuff, and adding the sql and locale paths.

2005-04-23  Richard Hult  <richard@imendio.com>

	* configure.in:
	* data/images/Makefile.am:
	* data/mime/Makefile.am: Remove some old pre-GNOME 2.10 cruft.

	* libplanner/Makefile.am:
	* src/Makefile.am:
	* libplanner/mrp-paths.h:
	* libplanner/mrp-paths-gnome.c:
	* libplanner/mrp-paths-win32.c: 
	* libplanner/*.[c]:
	* src/*.[c]: Implement path handling for the data files in a cross
	platform way, based on patch from Jani Tiainen.

	* src/planner-gantt-view.c:
	* src/planner-task-popup.c:
	* src/planner-task-view.c:
	* src/planner-usage-view.c:
	* src/planner-resource-view.c:
	* src/planner-window.c: (window_add_stock_icon),
	(window_add_stock_icons), (window_populate): Add all the stock
	icons we're using once, instead of in all the views etc.

2005-04-21  Francisco Moraes  <fmoraes@nc.rr.com>

	* configure.in:
	* libplanner/mrp-time.c:
	* src/Makefile.am:
	* src/planner-conf-win32.c:
	* src/planner-html-plugin.c: (html_plugin_show_url):
	* src/planner-main.c: (main):
	* src/planner-util.c:
	* src/planner-util-win32.c: More windows patches.

2005-04-21  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: Remove copy of URI drag and drop list code
	from glib now that we depend on 2.6.

2005-04-21  Richard Hult  <richard@imendio.com>

	* src/eel-canvas-rect.c: Remove gdkx.h include.

	* libplanner/mrp-xsl.c (xml_planner_pre012_write, html_write): Use