@@ -1,3 +1,8 @@
+2005-04-30  Richard Hult  <richard@imendio.com>
+
+	* src/planner-eds-plugin.c (plugin_init): Use the right path
+	function and the right path.
+
 2005-04-26  Richard Hult  <richard@imendio.com>
 
 	* libplanner/mrp-application.c: (application_init_gettext):
